# under_development

./: 2d_pnt.cpp  CMakeLists.txt  README.md  gnr_sqrs.cpp  gnr_sqrs_txt.cpp  grpr_t0.cpp  grpr_t0.h  main.c  main_master.c  ms_cbck.cpp  sgmnt.cpp  shape.cpp  shape.h  square.cpp  square.h  tgt_elem.cpp  theta_trfm.cpp  theta_trfm.h
dictionary_algorithm/: README.md
lab4/: lab4.cogui  lab4.comarker  lab4.comemgui  lab4.coproj  main.c
lab4/lab4.1/: lab4.1.cogui  lab4.1.comarker  lab4.1.coproj  main.c  mstr.c
lab4/lab4.1/lab4.1/lab4.1.elf.xcodeproj/: project.pbxproj
lab4/lab4/lab4.elf.xcodeproj/: project.pbxproj
